// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HamburgerButton /> should match snapshot 1`] = `
<button
  className="hamburgerButton"
>
  <div />
  <div />
  <div />
  <div />
</button>
`;

exports[`<HamburgerButton /> should match snapshot 2`] = `
<button
  className="hamburgerButton open"
>
  <div />
  <div />
  <div />
  <div />
</button>
`;
